cluster/apps/dashy/dashy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashy
  namespace: dashy
  labels:
    app.kubernetes.io/instance: dashy
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: dashy
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: dashy
    spec:
      restartPolicy: Always
      containers:
        - name: dashy
          image: lissy93/dashy:3.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: dashy-config
              mountPath: /app/public
      volumes:
        - name: dashy-config
          configMap:
            name: dashy
---
apiVersion: v1
kind: Service
metadata:
  name: dashy
  namespace: dashy
spec:
  selector:
    app.kubernetes.io/instance: dashy
  ports:
    - name: http
      port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashy
  namespace: dashy
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`home.${SECRET_DOMAIN}`) && PathPrefix(`/`)"
      middlewares:
        - name: forwardauth-authelia
          namespace: networking
        - name: security-header
          namespace: networking
      services:
        - kind: Service
          name: dashy
          namespace: dashy
          port: 80
          scheme: http
  tls:
    secretName: "${SECRET_DOMAIN}-tls"
